5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3993/executions/1671_1103.log
== TEST (2019-04-28 10:47:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 10:58:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b):
	print("x pertence ao intervalo a, b")
elif (x > a) or ( x > b):
	print("x nao pertence ao intervalo a, b")
elif ( b <= a):
	print ("Entradas a e b invalidas")
	
		
		

	
-- OUTPUT:
Entradas: -56.0 kWh e tipo I
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:04:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b):
	print(x,  "pertence ao intervalo" a","b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo" a"," b)

	
		
		

	
-- ERROR:
File "XXXX", line 8
    print(x,  "pertence ao intervalo" a","b)
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:05:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b):
	print(x,  "pertence ao intervalo"a","b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo" a"," b)

	
		
		

	
-- ERROR:
File "XXXX", line 8
    print(x,  "pertence ao intervalo"a","b)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:52:41) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo" a "," b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo" a "," b)
	else:
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 8
    print(x, "pertence ao intervalo" a "," b)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:53:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a "," b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo" a "," b)
	else:
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 8
    print(x, "pertence ao intervalo", a "," b)
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:53:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo" a "," b)
	else:
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 10
    print(x, "nao pertence ao intervalo" a "," b)
                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:53:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
	else:
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:54:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:54:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
		print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:54:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:55:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 11:55:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- EXECUTION TIME:
0.266943
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 11:56:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) or ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:00:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a "e", b "invalidas")
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:01:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- EXECUTION TIME:
0.185797
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-28 12:01:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a) or (a >= b):
	print("Entradas", a, "e", b, "invalidas")
		
	
	

	
		
		

	
-- EXECUTION TIME:
0.154205
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:

-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 12:07:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
	else:
		print("Entradas", a, "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:47:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
	else:
		print("Entradas", a, "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 11
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:47:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a, "e", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-28 20:48:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("numero x: "))
a = float(input("numero a: "))
b = float(input("numero b: "))
if (a <= x <=b) or (a >= x >= b):
	print(x, "pertence ao intervalo", a ,",", b)
elif (x > a) and  ( x > b):
	print(x, "nao pertence ao intervalo", a ,",", b)
elif ( b <= a):
	print("Entradas", a, "e", b "invalidas")
		
	
	

	
		
		

	
-- ERROR:
File "XXXX", line 12
    print("Entradas", a, "e", b "invalidas")
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
